# distributed_systems

./: LICENSE  README.md  docker-compose.yml  nginx.conf
.github/: CODEOWNERS
.github/workflows/: webapi_ci.yml
inventory_ms/: .env.development  .env.example  .gitignore  Cargo.toml  Makefile  docker-compose.environment.yml
inventory_ms/application/: Cargo.toml
inventory_ms/application/src/: lib.rs
inventory_ms/application/src/interfaces/: i_logger.rs  i_product_repository.rs  mod.rs
inventory_ms/application/src/usecases/: create_product.rs  get_inventory_by_id.rs  get_product_by_id.rs  get_products.rs  get_products_by_type.rs  mod.rs
inventory_ms/domain/: Cargo.toml
inventory_ms/domain/src/: lib.rs
inventory_ms/domain/src/dtos/: create_product_dto.rs  mod.rs
inventory_ms/domain/src/entities/: book_entity.rs  mod.rs  product_entity.rs
inventory_ms/domain/src/usecases/: i_create_product.rs  i_get_inventory_by_id.rs  i_get_product_by_id.rs  i_get_products.rs  i_get_products_by_type.rs  mod.rs
inventory_ms/grpc/: Cargo.toml  build.rs
inventory_ms/grpc/proto/: inventory.proto
inventory_ms/grpc/src/: inventory.rs  main.rs
inventory_ms/grpc/src/controllers/: inventory_controller.rs  mod.rs  product_controller.rs
inventory_ms/grpc/src/models/: product_model.rs
inventory_ms/infra/: Cargo.toml
inventory_ms/infra/src/: lib.rs
inventory_ms/infra/src/database/: connection.rs  mod.rs
inventory_ms/infra/src/database/documents/: mod.rs  product_documents.rs
inventory_ms/infra/src/environments/: env.rs
inventory_ms/infra/src/logger/: logger.rs
inventory_ms/infra/src/repositories/: inventory_repository.rs  mod.rs  product_repository.rs
inventory_ms/infra/src/telemetry/: telemetry.rs
inventory_ms/webapi/: Cargo.toml
mailer_ms/: .env.development  .env.staging
payment_ms/: Dockerfile
purchase_ms/: .env.development  .env.production  .env.staging  .eslintrc.js  .eslintrc.json  Dockerfile  docker-compose.environment.yml  jest.config.js  jest.setup.js  package-lock.json  package.json
purchase_ms/src/: ioc.js  main.js
purchase_ms/src/application/errors/: conflict_error.js  contract_error.js  internal_error.js  not_found_error.js  unavailable_service_error.js
purchase_ms/src/application/usecases/: purchase_usecase.js
purchase_ms/src/domain/entities/: either.js
purchase_ms/src/domain/enums/: error_code.js
purchase_ms/src/infra/database/: connection.js  purchase_model.js
purchase_ms/src/infra/environment/: environments.js
purchase_ms/src/infra/grpc_client/: grpc_client.js  inventory_client.js
purchase_ms/src/infra/http_client/: payment_client.js
purchase_ms/src/infra/message_broker/: message_broker.js
purchase_ms/src/infra/pub_client/: pub_client.js
purchase_ms/src/infra/repositories/: purchase_repository.js
purchase_ms/src/infra/telemetry/: telemetry.js
purchase_ms/tests/application/errors/: conflict_error.spec.js  internal_error.spec.js  not_found_error.spec.js  unavailable_service_error.spec.js
purchase_ms/tests/application/usecases/: purchase_usecase.spec.js
purchase_ms/tests/infra/database/: connection.spec.js  purchase_model.spec.js
purchase_ms/tests/infra/grpc_client/: gprc_client.spec.js  inventory_client.spec.js
purchase_ms/tests/infra/http_client/: payment_client.spec.js
purchase_ms/tests/infra/repositories/: purchase_repository.spec.js
webapi/: .env.development  .env.example  .env.production  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.environment.yml  go.mod  go.sum  main.go  makefile
webapi/cmd/: webapi_cmd.go  webapi_ioc.go
webapi/pkg/: coverage.out
webapi/pkg/app/errors/: bad_request_error_test.go  confict_error.go  conflict_error.go  conflict_error_test.go  internal_error.go  internal_error_test.go  not_found_error.go  not_found_error_test.go  unauthorize_error.go  unauthorize_error_test.go
webapi/pkg/app/interfaces/: i_hasher.go  i_inventory_client.go  i_logger.go  i_message_broker.go  i_telemetry.go  i_token_manager.go  i_user_repository.go  i_validator.go
webapi/pkg/app/usecases/: authenticate_user_usecase.go  authentication_usecase.go  authentication_usercase.go  create_product_usecase.go  create_product_usecase_test.go  create_user_usecase.go  create_user_usecase_test.go  get_book_by_id_usecase.go  get_product_by_id_usecase.go  get_product_by_id_usecase_test.go  mocks.go  purchase_usecase.go  purchase_usecase_test.go  session_usecase.go  session_usecase_test.go  validate_token_usecase_test.go  validate_token_usercase.go
webapi/pkg/domain/dtos/: authentication.go  book_dto.go  product_dto.go  pruchase_dto.go  user_dto.go  validated_dto.go
webapi/sql/: create_users_table.sql
(+76 files in other folders)
