[package]
name = "grpc"
version = "0.1.0"
edition = "2018"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infra = { path = "../infra" }

log = { version = "0.4.14" }
tonic = { version = "0.5.0", features = ["transport", "codegen", "tls", "tls-roots", "prost", "compression"] }
prost = { version = "0.8" }
tokio = { version = "1.0", features = ["full"] }

tracing-log = { version = "0.1.2" }
tracing-bunyan-formatter = { version = "0.3.0" }
opentelemetry = { version = "0.16.0", features = [ "rt-tokio" ] }
opentelemetry-jaeger = { version = "0.15.0", features = [ "rt-tokio" ] }
tracing = { version = "0.1.29" }
tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }
tracing-opentelemetry = { version = "0.16.0" }
tracing-futures = { version = "0.2.5" }

[dev-dependencies]
mockall = "0.10.2"

[build-dependencies]
tonic-build = { version = "0.5.0", features = ["prost", "compression"] }
