[package]
name = "infra"
version = "0.1.0"
edition = "2018"


[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

log = { version = "0.4.14" }
env_logger = { version = "0.9.0" }
dotenv = { version = "0.15.0" }
mongodb = { version = "2.0.1" }
serde = {version = "1.0", features = ["derive"] }
async-trait = { version = "0.1.51" }
uuid = { version = "0.8", features = ["serde", "v4"] }
newrelic = { version = "0.2", features = ["distributed_tracing"] }
newrelic-sys = { version = "0.2" }
libc = { version = "0.2" }

[dev-dependencies]
mockall = { version = "0.10.2" }
tokio = { version = "1.0",  features = ["full"] }