[package]
name = "infra"
version = "0.1.0"
edition = "2018"


[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

log = { version = "0.4.14" }
env_logger = { version = "0.9.0" }
dotenv = { version = "0.15.0" }
mongodb = { version = "2.0.1" }
serde = {version = "1.0", features = ["derive"] }
async-trait = { version = "0.1.51" }
uuid = { version = "0.8", features = ["serde", "v4"] }

sentry = { version = "0.23.0", features = ["debug-images", "tracing"] }
tracing = { version = "0.1" }
tracing-log = { version = "0.1.2" }
tracing-bunyan-formatter = { version = "0.2.4" }
tracing-subscriber = { version = "0.2.19" }
sentry-tracing = { version = "0.23.0" }

[dev-dependencies]
mockall = { version = "0.10.2" }
tokio = { version = "1.0",  features = ["full"] }