[package]
name = "infra"
version = "0.1.0"
edition = "2018"


[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

log = { version = "0.4.14" }
env_logger = { version = "0.9.0" }
dotenv = { version = "0.15.0" }
mongodb = { version = "2.0.1" }
futures = { version = "0.3.17"}
serde = {version = "1.0", features = ["derive"] }
async-trait = { version = "0.1.51" }
uuid = { version = "0.8", features = ["serde", "v4"] }
tonic = { version = "0.5.0" }

tracing-log = { version = "0.1.2" }
tracing-bunyan-formatter = { version = "0.3.0" }
opentelemetry = { version = "0.16.0", features = [ "rt-tokio" ] }
opentelemetry-jaeger = { version = "0.15.0", features = [ "rt-tokio" ] }
tracing = { version = "0.1.29" }
tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }
tracing-opentelemetry = { version = "0.16.0" }
tracing-futures = { version = "0.2.5" }

[dev-dependencies]
mockall = { version = "0.10.2" }
tokio = { version = "1.0",  features = ["full"] }